--- a/graylog/map.jinja
+++ b/graylog/map.jinja
@@ -121,7 +121,7 @@
         'port': '465',
         'use_auth': 'true',
         'use_tls': 'true',
-        'use_ssl': 'true',
+        'use_ssl': 'false',
         'auth_username': 'you@domain.tld',
         'auth_password': 'secret',
         'subject_prefix': '[graylog]',
